# MDGE

./: .gitmodules  CMakeLists.txt  mdg_file_format.txt
3d_objects/: cube.ascii.ply
dependencies/: CMakeLists.txt
dependencies/OpenGL/: CMakeLists.txt
dependencies/OpenGL/include/: OpenGL.hpp
dependencies/OpenGL/include/glad/: glad.h
dependencies/OpenGL/src/: glad.c
dependencies/vma/: CMakeLists.txt  vk_mem_alloc.h
include/: file.hpp  glb_loader.hpp  md_geometry.hpp  mesh.hpp  object.hpp  transform.hpp
include/OpenGL/: gl_buffer.hpp  gl_program.hpp  gl_vertex_buffer.hpp  gl_window.hpp
include/vulkan/: vk_context.hpp
include/windows/: win32_console.hpp  win32_cursor.hpp  win32_window.hpp
shaders/gl_shaders/: sample_shader.frag  sample_shader.vert
src/: file.cpp  glb_loader.cpp  mesh.cpp
src/OpenGL/: OpenGL_window.cpp  gl_buffer.cpp  gl_program.cpp  gl_vertex_buffer.cpp  gl_window.cpp
src/vulkan/: vk_context.cpp
src/windows/: win32_cursor.cpp  win32_window.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
